<resources>

    <string name="app_name">Biblioteca_TFG</string>

    <!-- ////////////////////////////// -->
    <!-- ///////     LIBROS    //////// -->
    <!-- ////////////////////////////// -->

    <string name="reservaLibro.autorDelLibro">Autor del libro: </string>
    <string name="reservaLibro.ISBNdelLibro">ISBN del libro: </string>
    <string name="reservaLibro.nombreDelLibro">Nombre del libro: </string>
    <string name="reservaLibro.descripcionDelLibro">Descripción del libro: </string>
    <string name="reservaLibro.librosDisponibles">Libros Disponibles</string>
    <string name="reservaLibro.estadoReserva">Estado de la reserva</string>


    <string name="consultaReservaLibro.fechaReserva">Fecha de la reserva</string>
    <string name="consultaReservaLibro.listaReservas">Reservas Realizadas</string>
    <string name="consultaReservaLibro.idReserva">ID de la Reserva</string>
    <string name="consultaReservaLibro.estadoProceso">EN PROCESO</string>
    <string name="consultaReservaLibro.estadoCompletado">COMPLETADO</string>

    <string name="cancelarReservaLibro.descripcion">Por favor, introduce el ID de la reserva que quieres cancelar</string>
    <string name="cancelarReservaLibro.introduceCodigo">Introduce el codigo</string>
    <string name="cancelarReservaLibro.codigoEnBlanco">Por favor, introduce un codigo</string>
    <string name="cancelarReservaLibro.idNoEncontrado">El código introducido no se encuentra en su lista de reservas. Por favor, compruebe que ha escrito bien el ID del código</string>
    <string name="cancelarReservaLibro.idEncontrado">La reserva del libro ha sido cancelada</string>
    <string name="cancelarReservaLibro.estadoCompletado">La reserva de este libro está completada, no se puede eliminar de la lista.</string>

    <string name="reservaLibro.realizarReserva">Realizar Reserva</string>
    <string name="reservaLibro.deseaReservar">¿Deseas realizar la reserva de este libro?</string>
    <string name="reservaLibro.reservaRealizada">Reserva del libro realizada</string>


    <!-- ////////////////////////////// -->
    <!-- ///////     SILLAS    //////// -->
    <!-- ////////////////////////////// -->

    <string name="reservarAsiento.reservarAsientoFecha">Selecciona una fecha</string>
    <string name="reservarAsiento.fecha">Selecciona una fecha</string>
    <string name="reservarAsiento.mesa">M\nE\nS\nA</string>
    <string name="reservarAsiento.seleccionPlanta">Planta</string>
    <string name="reservarAsiento.seleccionMesa">Mesa</string>
    <string name="reservarAsiento.fechaReserva">Por favor, introduce una fecha</string>
    <string name="reservarAsiento.reservaYaRealizada">Ya tienes una reserva realizada para esta fecha</string>
    <string name="reservarAsiento.biblioCerrada">La biblioteca esta cerrada este dia</string>

    <string name="cancelarReservaAsiento.cancelarReserva">Cancelar Reserva</string>
    <string name="cancelarReservaAsiento.descripcion">Por favor, introduce el ID de la reserva que quieres cancelar</string>
    <string name="cancelarReservaAsiento.introduceCodigo">Introduce el código</string>
    <string name="cancelarReservaAsiento.fechaPasada">La fecha de esta reserva es anterior a la fecha actual. Por favor, introduce una fecha valida</string>
    <string name="cancelarReservaAsiento.idNoEncontrado">No se ha encontrado el ID de esta reserva</string>
    <string name="cancelarReservaAsiento.idEncontrado">La reserva se ha cancelado correctamente</string>

    <string name="consultarReservaAsiento.idReserva">ID Reserva: </string>
    <string name="consultarReservaAsiento.fechaReserva">Fecha Reserva: </string>
    <string name="consultarReservaAsiento.numPlanta">Número Planta: </string>
    <string name="consultarReservaAsiento.numMesa">Número Mesa: </string>
    <string name="consultarReservaAsiento.numAsiento">Número Asiento: </string>
    <string name="consultarReservaAsiento.listaReservas">Reservas Realizadas</string>
    <string name="consultarReservaAsiento.errorRecuperReservas">Error al recuperar las reservas del usuario</string>
    <string name="reservaAsiento.deseaReservar">¿Deseas realizar la reserva de este asiento?</string>
    <string name="reservaAsiento.reservaRealizada">Reserva del asiento realizada</string>

    <!-- ////////////////////////////// -->
    <!-- ///////     OTROS     //////// -->
    <!-- ////////////////////////////// -->

    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="introduceUsuario">Introduce el usuario</string>
    <string name="introduceContrasena">Introduce la contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="upvehu">UPV/EHU</string>
    <string name="tituloAplicacion">EHU Liburutegia </string>
    <string name="biblioteca">Biblioteca</string>
    <string name="ajustes">Ajustes</string>
    <string name="reservarLibro">Reservar Libro</string>
    <string name="cancelarReservaLibro">Cancelar Reserva</string>
    <string name="consultarReservaLibro">Consultar Reserva</string>
    <string name="reservarAsiento">Reservar Asiento</string>
    <string name="cancelarReservaAsiento">Cancelar Reserva</string>
    <string name="consultarReservaAsiento">Consultar Reserva</string>
    <string name="gaur">G.A.U.R.</string>
    <string name="informacion">

        Bienvenido/a a la nueva aplicación de reserva y gestión de la biblioteca de la Escuela de Ingeniería de la UPV/EHU de Bilbao. \n\nCon esta nueva aplicación, podrás tanto reservar un sitio en la bilbioteca para poder estudiar, como reservar los libros que necesites en la biblioteca. \n\n
        HORARIOS DE LA BIBLIOTECA \n\nLunes  9:00–20:30 \n\nMartes  9:00–20:30\n\nMiércoles  9:00–20:00\n\nJueves  9:00–20:00\n\nViernes  9:00–20:00\n\nSábado  Cerrado\n\nDomingo  Cerrado\n\nSi tienes cualquier duda te dejamos nuestros contactos para que podamos resolvertelas.

    </string>
    <string name="errorGenerico">Ha habido un error en la operación</string>
    <string name="horasBiblioteca">Lunes  9:00–20:30 \nMartes  9:00–20:30\nMiércoles  9:00–20:00\nJueves  9:00–20:00\nViernes  9:00–20:00\nSábado  Cerrado\nDomingo  Cerrado</string>
    <string name="informacion.noEncuentraMAPS">No tienes google MAPS instalado</string>
    <string name="direccion">Escuela de Ingeniería de Bilbao, Calle Rafael Moreno Pitxitxi, 2-3, 48013 Bilbao, Vizcaya</string>
    <string name="bienvenido">Bienvenido a EHU - Liburutegia</string>
    <string name="olvidoContrasena">¿Olvidó su contraseña?</string>
    <string name="horarioBiblioteca">Horario de la Biblioteca</string>
    <string name="valorarAPP">Valorar Aplicación</string>
    <string name="idioma.castellano">Castellano</string>
    <string name="idioma.euskera">Euskera</string>
    <string name="loginDatos">Por favor introduce los datos del Log in</string>El usuario o la contraseña es erróneo
    <string name="loginErroneo">El usuario o la contraseña es erróneo</string>
    <string name="enviarCorreo">Enviar Correo</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="cerrarSesionConfirmacion">¿Estas seguro de que quieres salir de la aplicación?</string>



    <!-- ////////////////////////////// -->
    <!-- ///////     AJUSTES   //////// -->
    <!-- ////////////////////////////// -->

    <string name="ajustes.appNoInstalada">La aplicacion no esta instalada</string>
    <string name="ajustes.cambioContrasena">Modificar la contraseña</string>
    <string name="ajustes.seleccionaIdioma">Selecciona un idioma</string>
    <string name="ajustes.guardar">Guardar</string>


    <!-- ////////////////////////////// -->
    <!-- /////  ADMINISTRADOR   /////// -->
    <!-- ////////////////////////////// -->
    <string name="administrador.nombreUsuario">Nombre Administrador</string>
    <string name="administrador.insertaNombreLibro">Por favor, inserta un título para el libro</string>
    <string name="administrador.insertaAutorLibro">Por favor, inserta un autor para el libro</string>
    <string name="administrador.insertaISBNLibro">Por favor, inserta un ISBN para el libro</string>
    <string name="administrador.insertaDescripcionLibro">Por favor, inserta una descripción para el libro</string>
    <string name="administrador.libroAnadido">Se ha añadido el libro correctamente</string>
    <string name="administrador.libroModificado">Se ha modificado el libro correctamente</string>
    <string name="administrador.libroEliminado">Se ha eliminado el libro correctamente</string>
    <string name="administrador.anadir">Añadir</string>
    <string name="administrador.modificar">Modificar</string>
    <string name="administrador.eliminar">Eliminar</string>
    <string name="administrador.eliminarPregunta">¿Desea eliminar este libro del sistema?</string>
    <string name="administrador.modificarPregunta">¿Desea modificar este libro en el sistema?</string>
    <string name="administrador.anadirPregunta">¿Desea añadir este libro al sistema?</string>
    <string name="administrador.editarAlumno">¿Desea editar este alumno en el sistema?</string>
    <string name="administrador.insertaNombreAlumno">Por favor introduce un nombre para el alumno</string>
    <string name="administrador.insertaLDAP">Por favor introduce un LDAP para el alumno</string>
    <string name="administrador.alumnoActualizado">Se ha actualizado el Alumno</string>
    <string name="administrador.noAlumnoActualizado">No se ha podido actualizar el Alumnoo</string>


</resources>