<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallasApp.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/verde"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btnAjustes"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="9dp"
                android:background="@color/verde"
                android:foreground="@drawable/ajustes"
                android:foregroundTint="#FF9800"
                android:src="@drawable/ajustes"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="70dp"
                android:text="@string/tituloAplicacion"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <ImageButton
                android:id="@+id/btnSalir"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="9dp"
                android:background="@color/verde"
                android:foregroundTint="#FF9800"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_lock_power_off"
                app:tint="#FF9800"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".LoginActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:hint="@string/usuario"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ldapUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_negro"
                android:gravity="center"
                android:hint="@string/introduceUsuario"
                android:minHeight="50dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/contrasena"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/contrasenaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borde_negro"
                android:gravity="center"
                android:hint="@string/introduceContrasena"
                android:minHeight="50dp" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/acceder"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/orange"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/upvehu"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
            />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>