<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    android:foregroundTint="#FFFFFF"
    tools:context=".PantallasApp.Ajustes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/verde"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tituloAplicacion"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:orientation="vertical"
            android:padding="30dp"
            tools:context=".LoginActivity">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="left|center"
                android:text="@string/ajustes"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:background="@drawable/borde_negro"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                tools:context=".LoginActivity"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:padding="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ajustes.seleccionaIdioma"
                    android:textSize="20dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:id="@+id/spinnerIdiomas"
                    android:padding="16dp"
                    android:text="@string/ajustes.seleccionaIdioma"
                    android:background="@drawable/borde_negro"
                    android:textSize="20dp" />


                <Button
                    android:id="@+id/valorarAPP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/valorarAPP"
                    android:textColor="@color/orange"
                    android:textSize="19dp"
                    android:layout_marginTop="60dp"
                    app:icon="@android:drawable/btn_star"
                    app:iconTint="#FF9800"
                    android:background="@drawable/borde_negro"
                    />



                <Button
                    android:id="@+id/guardarIdioma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ajustes.guardar"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"/>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/upvehu"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
            />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>