<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallasApp.AjustesLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/verde"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="60dp"
                android:text="@string/tituloAplicacion"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnSalir"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="17dp"
                android:background="@color/verde"
                android:foregroundTint="#FF9800"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_lock_power_off"
                app:tint="#FF9800"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:orientation="vertical"
            android:padding="30dp"
            tools:context=".LoginActivity">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="left|center"
                android:text="@string/ajustes"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@drawable/borde_negro"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                tools:context=".LoginActivity"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ajustes.seleccionaIdioma"
                    android:textSize="20dp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:id="@+id/spinnerIdiomas"
                    android:padding="16dp"
                    android:text="@string/ajustes.seleccionaIdioma"
                    android:background="@drawable/borde_negro"
                    android:textSize="20dp" />


                <Button
                    android:id="@+id/valorarAPP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/valorarAPP"
                    android:textColor="@color/orange"
                    android:textSize="19dp"
                    android:layout_marginTop="40dp"
                    app:icon="@android:drawable/btn_star"
                    app:iconTint="#FF9800"
                    android:background="@drawable/borde_negro"
                    />

                <Button
                    android:id="@+id/cambiarContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/borde_negro"
                    android:backgroundTint="#00FFFFFF"
                    android:text="@string/ajustes.cambioContrasena"
                    android:textColor="@color/orange"
                    android:textSize="19dp"
                    app:icon="@android:drawable/ic_lock_lock"
                    app:iconTint="#FF9800" />



                <Button
                    android:id="@+id/guardarIdioma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ajustes.guardar"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"/>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/upvehu"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
            />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>